@@ -2,6 +2,10 @@
 
 2009-July-11 Struan Robertson
 
+	* System.cpp: More LineSearch material.
+
+2009-July-11 Struan Robertson
+
 	* System.cpp: Addition of LineSearch method required by automated search.
 
 2009-June-28 Struan Robertson
